# glinet-profiler

./: CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: profile-submission.yml
.github/workflows/: ci.yml  release.yml  submit-profile.yml
docs/plans/: 2026-06-27-internalize-enumerator.md
docs/specs/: 2026-06-27-internalize-enumerator-design.md  2026-06-27-release-automation-design.md
docs/superpowers/specs/: 2026-06-29-rich-schema-design.md
scripts/: ingest_submission.py
src/glinet_profiler/: capture.py  cli.py  glinet_login.py  ingest.py  sanitize.py  server.py  submit.py
src/glinet_profiler/enumerator/: __init__.py  catalog.py  classify.py  coverage.py  models.py  probe.py  redact.py  report.py  ssh.py  wordlist.py
src/glinet_profiler/web/: app.js  index.html  style.css
tests/: test_capture.py  test_cli.py  test_enum_brute.py  test_enum_catalog.py  test_enum_classify.py  test_enum_probe.py  test_enum_redact.py  test_enum_report.py  test_enum_ssh_integration.py  test_enum_ssh_parse.py  test_glinet_login.py  test_ingest_submission.py  test_sanitize.py  test_server.py  test_submit.py  test_web.py
