[project]
name = "glinet-profiler"
version = "0.0.1"  # managed by release-please
description = "Local capture launcher + registry for GL.iNet device API profiles."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.8.4", "paramiko>=3", "libpass>=1.8"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/shauneccles/glinet-profiler"
Repository = "https://github.com/shauneccles/glinet-profiler"
Changelog = "https://github.com/shauneccles/glinet-profiler/blob/main/CHANGELOG.md"

[project.scripts]
glinet-profiler = "glinet_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glinet_profiler"]

[dependency-groups]
dev = [
    "pytest>=7.2",
    "pytest-asyncio>=0.21",
    "pytest-aiohttp>=1.0",
    "ruff>=0.6",
    "mypy>=1.8",
    "pylint>=3",
    "zizmor>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["paramiko", "passlib", "passlib.*"]
ignore_missing_imports = true

[tool.pylint."messages control"]
disable = [
    "import-error",
    "fixme",
    "line-too-long",
    "invalid-name",
    "too-many-public-methods",
    "abstract-method",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-locals",
    "too-many-arguments",
    "too-many-positional-arguments",
    "import-outside-toplevel",
    "duplicate-code",
]
